Point all aliases to the base method

--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -50,7 +50,7 @@ j-column(ratios = 1, offset = 0, cycle = 0, uncycle = 0, gutter = jeet.gutter)
  * Aliases for column.
  */
 column = j-column
-col = column
+col = j-column
 
 /**
  * Get the width of a column and nothing else.
@@ -78,7 +78,7 @@ j-column-gutter(ratios = 1, gutter = jeet.gutter)
  * Aliases for j-column-gutter.
  */
 column-gutter = j-column-gutter
-cg = column-gutter
+cg = j-column-gutter
 
 /**
  * Style an element as a column without any gutters for a seamless row.
