From C style comments to SassDoc comments
The old style "/**" were updated to "///" so SassDoc can interpret how
things works in the .scss files.

From now on, just rounding the corners.

--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -1,23 +1,23 @@
-/**
- * List functions courtesy of the wonderful folks at Team Sass.
- * Check out their awesome grid: Singularity.
- */
+///
+/// List functions courtesy of the wonderful folks at Team Sass.
+/// Check out their awesome grid: Singularity.
+///
 
-/**
- * Get  percentage from a given ratio.
- * @param {number} [$ratio=1] - The column ratio of the element.
- * @returns {number} - The percentage value.
- */
+///
+/// Get  percentage from a given ratio.
+/// @param {number} [$ratio=1] - The column ratio of the element.
+/// @returns {number} - The percentage value.
+///
 @function jeet-get-span($ratio: 1) {
   @return $ratio * 100;
 }
 
-/**
- * Work out the column widths based on the ratio and gutter sizes.
- * @param {number} [$ratios=1] - The column ratio of the element.
- * @param {number} [$gutter=$jeet-gutter] - The gutter for the column.
- * @returns {list} $width $gutter - A list containing the with and gutter for the element.
- */
+///
+/// Work out the column widths based on the ratio and gutter sizes.
+/// @param {number} [$ratios=1] - The column ratio of the element.
+/// @param {number} [$gutter=$jeet-gutter] - The gutter for the column.
+/// @returns {list} $width $gutter - A list containing the with and gutter for the element.
+///
 @function jeet-get-column($ratios: 1, $gutter: $jeet-gutter) {
   $ratios: if(not $jeet-parent-first, jeet-reverse($ratios), $ratios);
   $width: 100;
@@ -30,24 +30,24 @@
   @return $width $gutter;
 }
 
-/**
- * Get the set layout direction for the project.
- * @returns {string} $direction - The layout direction.
- */
+///
+/// Get the set layout direction for the project.
+/// @returns {string} $direction - The layout direction.
+///
 @function jeet-get-layout-direction() {
   $direction: if($jeet-layout-direction == "RTL", right, left);
 
   @return $direction;
 }
 
-/**
- * Replace a specified list value with a new value (uses built in set-nth() if available)
- * @param {list} $list - The list of values you want to alter.
- * @param {number} $index - The index of the list item you want to replace.
- * @param {*} $value - The value you want to replace $index with.
- * @returns {list} $list - The list with the value replaced or removed.
- * @warn if an invalid index is supplied.
- */
+///
+/// Replace a specified list value with a new value (uses built in set-nth() if available)
+/// @param {list} $list - The list of values you want to alter.
+/// @param {number} $index - The index of the list item you want to replace.
+/// @param {*} $value - The value you want to replace $index with.
+/// @returns {list} $list - The list with the value replaced or removed.
+/// @warn if an invalid index is supplied.
+///
 @function jeet-replace-nth($list, $index, $value) {
   // Fallback for Sass 3.2
   @if function-exists("set-nth") != true {
@@ -67,11 +67,11 @@
   @return $result;
 }
 
-/**
- * Reverse a list (progressively enhanced for Sass 3.3)
- * @param {list} $list - The list of values you want to reverse.
- * @returns {list} $result - The reversed list.
- */
+///
+/// Reverse a list (progressively enhanced for Sass 3.3)
+/// @param {list} $list - The list of values you want to reverse.
+/// @returns {list} $result - The reversed list.
+///
 @function jeet-reverse($list) {
   // Sass 3.2
   @if function-exists("set-nth") != true {
@@ -103,12 +103,12 @@
   @return $list;
 }
 
-/**
- * Get the opposite direction to a given value.
- * @param {string} $dir - The direction you want the opposite of.
- * @returns {string} - The opposite direction to $dir.
- * @warn if an incorrect string is provided.
- */
+///
+/// Get the opposite direction to a given value.
+/// @param {string} $dir - The direction you want the opposite of.
+/// @returns {string} - The opposite direction to $dir.
+/// @warn if an incorrect string is provided.
+///
 @function jeet-opposite-direction($direction) {
   @if $direction == "left" {
     @return right;
@@ -128,11 +128,11 @@
   }
 }
 
-/**
- * Perform a value into a percentage value.
- * @param {number} $value - The value which should be converted.
- * @returns {number} $value - The percentage.
- */
+///
+/// Perform a value into a percentage value.
+/// @param {number} $value - The value which should be converted.
+/// @returns {number} $value - The percentage.
+///
 @function jeet-get-percentage($value) {
   @if $value == 0 {
     @return 0;
