--- a/scss/jeet/_settings.scss
+++ b/scss/jeet/_settings.scss
@@ -1,7 +1,7 @@
-/**
- * Grid settings.
- * All values are defaults and can therefore be easily overidden.
- */
+///
+/// Grid settings.
+/// All values are defaults and can therefore be easily overidden.
+///
 
 $jeet-gutter:           3      !default;
 $jeet-parent-first:     false  !default;
