--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -2,16 +2,17 @@
 /// Check out their awesome grid: Singularity.
 
 /// Get  percentage from a given ratio.
-/// @param {number} [$ratio=1] - The column ratio of the element.
+/// @param {number} $ratio [1] - The column ratio of the element.
 /// @returns {number} - The percentage value.
 @function jeet-get-span($ratio: 1) {
   @return $ratio * 100;
 }
 
 /// Work out the column widths based on the ratio and gutter sizes.
-/// @param {number} [$ratios=1] - The column ratio of the element.
-/// @param {number} [$gutter=$jeet-gutter] - The gutter for the column.
-/// @returns {list} $width $gutter - A list containing the with and gutter for the element.
+/// @param {number} $ratios [1] - The column ratio of the element.
+/// @param {number} $gutter [$jeet-gutter] - The gutter for the column.
+/// @returns {list} $width $gutter - A list containing the with and gutter for
+/// the element.
 @function jeet-get-column($ratios: 1, $gutter: $jeet-gutter) {
   $ratios: if(not $jeet-parent-first, jeet-reverse($ratios), $ratios);
   $width: 100;
@@ -32,7 +33,8 @@
   @return $direction;
 }
 
-/// Replace a specified list value with a new value (uses built in set-nth() if available)
+/// Replace a specified list value with a new value (uses built in set-nth()
+/// if available)
 /// @param {list} $list - The list of values you want to alter.
 /// @param {number} $index - The index of the list item you want to replace.
 /// @param {*} $value - The value you want to replace $index with.
