Full support to SassDoc
Configured the '@access' to 'private' in every function so it doesn't
appear on the generated files by SassDoc.

Removed some '@requires' used in wrong way and instead of it, using the
description with markdown syntax for proper highlights.

There were some '@warn' used in wrong way too, those were replaced with
'@throw' and the kind of error was described just as before.

The descriptions and '@types' for settings were added too, so now they
will appear on the generated files by SassDoc. The importance and need
for this approach is related for some '@params' are using those
variables as 'default values'.

--- a/scss/jeet/_grid.scss
+++ b/scss/jeet/_grid.scss
@@ -1,9 +1,12 @@
 /// Style an element as a column with a gutter.
-/// @param {number} [$ratios=1] - A width relative to its container as a fraction.
-/// @param {number} [$offset=0] - A offset specified as a fraction (see $ratios).
-/// @param {number} [$cycle=0] - Easily create an nth column grid where $cycle equals the number of columns.
-/// @param {number} [$uncycle=0] - Undo a previous cycle value to allow for a new one.
-/// @param {number} [$gutter=$jeet-gutter] - Specify the gutter width as a percentage of the containers width.
+/// @param {Number} $ratios [1] - A width relative to its container as a fraction.
+/// @param {Number} $offset [0] - A offset specified as a fraction.
+/// @param {Number} $cycle [0] - Easily create an nth column grid where $cycle
+/// equals the number of columns.
+/// @param {Number} $uncycle [0] - Undo a previous cycle value to allow for a
+/// new one.
+/// @param {Number} $gutter [$jeet-gutter] - Specify the gutter width as a
+/// percentage of the containers width.
 @mixin j-column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: $jeet-gutter) {
   $side: jeet-get-layout-direction();
   $opposite-side: jeet-opposite-direction($side);
@@ -60,55 +63,68 @@
   }
 }
 
-/// Aliases for j-column().
-
+/// @alias j-column
 @mixin column($args...) {
   @include j-column($args...);
 }
 
+/// @alias j-column
 @mixin col($args...) {
   @include j-column($args...);
 }
 
+/// @access private
 /// Get the width of a column and nothing else.
-/// @param {number} [$ratios=1] - A width relative to its container as a fraction.
-/// @param {number} [$gutter=$jeet-gutter] - Specify the gutter width as a percentage of the containers width.
+/// @param {Number} $ratios [1] - A width relative to its container as a
+/// fraction.
+/// @param {Number} $gutter [$jeet-gutter] - Specify the gutter width as a
+/// percentage of the containers width.
 @function j-column-width($ratios: 1, $gutter: $jeet-gutter) {
   @return jeet-get-percentage(nth(jeet-get-column($ratios, $gutter), 1));
 }
 
-/// Aliases for j-column-width().
-
+/// @access private
+/// @alias j-column-width
 @function column-width($args...) {
   @return j-column-width($args...);
 }
 
+/// @access private
+/// @alias j-column-width
 @function cw($args...) {
   @return j-column-width($args...);
 }
 
+/// @access private
 /// Get the gutter size of a column and nothing else.
-/// @param {number} [ratios=1] - A width relative to its container as a fraction.
-/// @param {number} [gutter=jeet.gutter] - Specify the gutter width as a percentage of the containers width.
+/// @param {Number} $ratios [1] - A width relative to its container as a
+/// fraction.
+/// @param {Number} $gutter [$jeet-gutter] - Specify the gutter width as a
+/// percentage of the containers width.
 @function j-column-gutter($ratios: 1, $gutter: $jeet-gutter) {
   @return jeet-get-percentage(nth(jeet-get-column($ratios, $gutter), 2));
 }
 
-/// Alias for j-column-gutter().
-
+/// @access private
+/// @alias j-column-gutter
 @function column-gutter($args...) {
   @return j-column-gutter($args...);
 }
 
+/// @access private
+/// @alias j-column-gutter
 @function cg($args...) {
   @return j-column-gutter($args...);
 }
 
 /// Style an element as a column without any gutters for a seamless row.
-/// @param {number} [$ratios=1] - A width relative to its container as a fraction.
-/// @param {number} [$offset=0] - A offset specified as a fraction (see $ratios).
-/// @param {number} [cycle=0] - Easily create an nth column grid where cycle equals the number of columns.
-/// @param {number} [uncycle=0] - Undo a previous cycle value to allow for a new one.
+/// @param {Number} $ratios [1] - A width relative to its container as a
+/// fraction.
+/// @param {Number} $offset [0] - A offset specified as a fraction.
+/// @param {Number} $cycle [0] - Easily create an nth column grid where cycle
+/// equals the number of columns.
+/// @param {Number} $uncycle [0] - Undo a previous cycle value to allow for a
+/// new one.
 @mixin j-span($ratio: 1, $offset: 0, $cycle: 0, $uncycle: 0) {
   $side: jeet-get-layout-direction();
   $opposite-side: jeet-opposite-direction($side);
@@ -156,15 +172,18 @@
 
 }
 
-/// Alias for j-span().
+/// @alias j-span
 @mixin span($args...) {
   @include j-span($args...);
 }
 
 /// Reorder columns without altering the HTML.
-/// @param {number} [$ratios=0] - Specify how far along you want the element to move.
-/// @param {string} [$col-or-span=column] - Specify whether the element has a gutter or not.
-/// @param {number} [$gutter=$jeet-gutter] - Specify the gutter width as a percentage of the containers width.
+/// @param {Number} $ratios [0] - Specify how far along you want the element
+/// to move.
+/// @param {String} $col-or-span [column] - Specify whether the element has a
+/// gutter or not.
+/// @param {Number} $gutter [$jeet-gutter] - Specify the gutter width as a
+/// percentage of the containers width.
 @mixin j-shift($ratios: 0, $col-or-span: column, $gutter: $jeet-gutter) {
   $translate: '';
   $side: jeet-get-layout-direction();
@@ -184,7 +203,7 @@
   left: jeet-get-percentage($translate);
 }
 
-/// Alias for j-shift().
+/// @alias j-shift
 @mixin shift($args...) {
   @include j-shift($args...);
 }
@@ -195,14 +214,15 @@
   left: 0;
 }
 
-/// Alias for j-unshift().
+/// @alias j-unshift
 @mixin unshift() {
   @include j-unshift();
 }
 
 /// View the grid and its layers for easy debugging.
-/// @param {string} [$color=black] - The background tint applied.
-/// @param {boolean} [$important=false] - Whether to apply the style as !important.
+/// @param {String} $color [black] - The background tint applied.
+/// @param {Bool} $important [false] - Whether to apply the style as
+/// !important.
 @mixin j-edit($color: black, $important: false) {
   @if $important {
     * {
@@ -215,19 +235,19 @@
   }
 }
 
-/// Aliases for j-edit().
-
+/// @alias j-edit
 @mixin edit($args...) {
   @include j-edit($args...);
 }
 
+/// @alias j-edit
 @mixin debug($args...) {
   @include j-edit($args...);
 }
 
 /// Horizontally center an element.
-/// @param {number} [$max-width=1410px] - The max width the element can be.
-/// @param {number} [$pad=0] - Specify the element's left and right padding.
+/// @param {Number} $max-width [1410px] - The max width the element can be.
+/// @param {Number} $pad [0] - Specify the element's left and right padding.
 @mixin j-center($max-width: $jeet-max-width, $pad: 0) {
   width: auto;
   max-width: $max-width;
@@ -245,7 +265,7 @@
   };
 }
 
-/// Alias for j-center().
+/// @alias j-center
 @mixin center($args...) {
   @include j-center($args...);
 }
@@ -265,14 +285,15 @@
   };
 }
 
-/// Alias for j-uncenter().
+/// @alias j-uncenter
 @mixin uncenter() {
   @include j-uncenter;
 }
 
 /// Stack an element so that nothing is either side of it.
-/// @param {number} [$pad=0] - Specify the element's left and right padding.
-/// @param {boolean/string} [$align=false] - Specify the text align for the element.
+/// @param {Number} $pad [0] - Specify the element's left and right padding.
+/// @param {Bool | String} $align [false] - Specify the text align for the
+/// element.
 @mixin j-stack($pad: 0, $align: false) {
   $side: jeet-get-layout-direction();
   $opposite-side: jeet-opposite-direction($side);
@@ -313,7 +334,7 @@
   }
 }
 
-/// Alias for j-stack().
+/// @alias j-stack
 @mixin stack($args...) {
   @include j-stack($args...);
 }
@@ -342,14 +363,16 @@
   }
 }
 
-/// Alias for j-unstack().
+/// @alias j-unstack
 @mixin unstack() {
   @include j-unstack();
 }
 
+/// `Requires a parent element with relative positioning.`
+///
 /// Center an element on either or both axes.
-/// @requires A parent container with relative positioning.
-/// @param {string} [$direction=both] - Specify which axes to center the element on.
+/// @param {String} $direction [both] - Specify which axes to center the
+/// element on.
 @mixin j-align($direction: both) {
   position: absolute;
   transform-style: preserve-3d;
@@ -371,7 +394,7 @@
   }
 }
 
-/// Alias for j-align().
+/// @alias j-align
 @mixin align($args...) {
   @include j-align($args...);
 }
@@ -390,7 +413,7 @@
   }
 }
 
-/// Alias for j-cf().
+/// @alias j-cf
 @mixin cf() {
   @include j-cf();
 }
