--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -1,17 +1,19 @@
 /// List functions courtesy of the wonderful folks at Team Sass.
 /// Check out their awesome grid: Singularity.
 
+/// @access private
 /// Get  percentage from a given ratio.
-/// @param {number} $ratio [1] - The column ratio of the element.
-/// @returns {number} - The percentage value.
+/// @param {Number} $ratio [1] - The column ratio of the element.
+/// @returns {Number} - The percentage value.
 @function jeet-get-span($ratio: 1) {
   @return $ratio * 100;
 }
 
+/// @access private
 /// Work out the column widths based on the ratio and gutter sizes.
-/// @param {number} $ratios [1] - The column ratio of the element.
-/// @param {number} $gutter [$jeet-gutter] - The gutter for the column.
-/// @returns {list} $width $gutter - A list containing the with and gutter for
+/// @param {Number} $ratios [1] - The column ratio of the element.
+/// @param {Number} $gutter [$jeet-gutter] - The gutter for the column.
+/// @returns {List} $width $gutter - A list containing the with and gutter for
 /// the element.
 @function jeet-get-column($ratios: 1, $gutter: $jeet-gutter) {
   $ratios: if(not $jeet-parent-first, jeet-reverse($ratios), $ratios);
@@ -25,21 +27,23 @@
   @return $width $gutter;
 }
 
+/// @access private
 /// Get the set layout direction for the project.
-/// @returns {string} $direction - The layout direction.
+/// @returns {String} $direction - The layout direction.
 @function jeet-get-layout-direction() {
   $direction: if($jeet-layout-direction == "RTL", right, left);
 
   @return $direction;
 }
 
+/// @access private
 /// Replace a specified list value with a new value (uses built in set-nth()
 /// if available)
-/// @param {list} $list - The list of values you want to alter.
-/// @param {number} $index - The index of the list item you want to replace.
+/// @param {List} $list - The list of values you want to alter.
+/// @param {Number} $index - The index of the list item you want to replace.
 /// @param {*} $value - The value you want to replace $index with.
-/// @returns {list} $list - The list with the value replaced or removed.
-/// @warn if an invalid index is supplied.
+/// @returns {List} $list - The list with the value replaced or removed.
+/// @throw Error if an invalid index is supplied.
 @function jeet-replace-nth($list, $index, $value) {
   // Fallback for Sass 3.2
   @if function-exists("set-nth") != true {
@@ -59,9 +63,10 @@
   @return $result;
 }
 
+/// @access private
 /// Reverse a list (progressively enhanced for Sass 3.3)
-/// @param {list} $list - The list of values you want to reverse.
-/// @returns {list} $result - The reversed list.
+/// @param {List} $list - The list of values you want to reverse.
+/// @returns {List} $result - The reversed list.
 @function jeet-reverse($list) {
   // Sass 3.2
   @if function-exists("set-nth") != true {
@@ -93,10 +98,11 @@
   @return $list;
 }
 
+/// @access private
 /// Get the opposite direction to a given value.
-/// @param {string} $dir - The direction you want the opposite of.
-/// @returns {string} - The opposite direction to $dir.
-/// @warn if an incorrect string is provided.
+/// @param {String} $dir - The direction you want the opposite of.
+/// @returns {String} - The opposite direction to $dir.
+/// @throw Error if an incorrect string for position is provided.
 @function jeet-opposite-direction($direction) {
   @if $direction == "left" {
     @return right;
@@ -116,9 +122,10 @@
   }
 }
 
+/// @access private
 /// Perform a value into a percentage value.
-/// @param {number} $value - The value which should be converted.
-/// @returns {number} $value - The percentage.
+/// @param {Number} $value - The value which should be converted.
+/// @returns {Number} $value - The percentage.
 @function jeet-get-percentage($value) {
   @if $value == 0 {
     @return 0;
